# controller

./: .env.example  README.md  docker-compose.yml
.github/workflows/: CI.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  supabase_schema.sql
backend/.github/workflows/: CI.yml
backend/app/: config.py  main.py  middleware.py
backend/app/connectors/: orm.py
backend/app/connectors/client/: calendar.py  docs.py  gmail.py  linear.py  sheets.py  slack.py  test.json  x.py
backend/app/connectors/native/: utils.py
backend/app/connectors/native/stores/: base.py  feedback.py  message.py  token.py  user.py
backend/app/controllers/: feedback.py  query.py  token.py  user.py
backend/app/exceptions/: exception.py
backend/app/models/: feedback.py  token.py
backend/app/models/agents/: calendar.py  docs.py  gmail.py  linear.py  main.py  sheets.py  slack.py  x.py
backend/app/models/agents/base/: summary.py  template.py  triage.py
backend/app/models/integrations/: base.py  calendar.py  docs.py  gmail.py  linear.py  sheets.py  slack.py  test.json  x.py
backend/app/models/query/: base.py  confirm.py
backend/app/models/user/: login.py
backend/app/sandbox/integrations/: g_calendar.py  g_docs.py  g_sheets.py  gmail.py  linear.py  slack.py  x.py
backend/app/services/: feedback.py  message.py  query.py  token.py  user.py
backend/app/utils/: levenshtein.py  linear.py  tools.py
backend/docker/development/: Dockerfile
frontend/: .env.example  .eslintrc.js  README.md  jest.config.ts  next.config.mjs  package-lock.json  package.json
(+62 files in other folders)
